--- a/apps/api-nestjs-experiment/package.json
+++ b/apps/api-nestjs-experiment/package.json
@@ -13,7 +13,7 @@
     "start:debug": "nodemon --config nodemon-debug.json",
     "prestart:prod": "rimraf dist && npm run build",
     "start:prod": "node dist/main.js",
-    "clean": "rimraf dist",
+    "clean": "rimraf --no-glob dist",
     "typecheck": "tsc -p . --noEmit",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "lint:fix": "tslint -p tsconfig.json -c tslint.json --fix",
