--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "typecheck": "lerna run typecheck --parallel --stream"
   },
   "devDependencies": {
-    "husky": "^3.0.5",
+    "husky": "^3.0.7",
     "lerna": "^3.16.4",
-    "stmux": "^1.7.1"
+    "stmux": "^1.7.1",
+    "rimraf": "^3.0.0"
   },
   "husky": {
     "hooks": {
