--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,8 +13,8 @@
         "clean": "rimraf --no-glob dist",
         "typecheck": "tsc -p . --noEmit",
         "format": "prettier --write \"src/**/*.ts\"",
-        "lint": "tslint -p tsconfig.json -c tslint.json",
-        "lint:fix": "tslint -p tsconfig.json -c tslint.json --fix",
+        "lint": "eslint . --ext .ts,.tsx",
+        "lint:fix": "eslint . --ext .ts,.tsx --fix",
         "fix": "npm run format && npm run lint",
         "test": "jest -c jest.unit.config.js && jest -c jest.integration.config.js",
         "test:unit": "jest -c jest.unit.config.js",
@@ -49,8 +49,21 @@
         "@types/node": "^12.7.8",
         "@types/sqlite3": "^3.1.5",
         "@types/swagger-ui-express": "^3.0.1",
+        "@typescript-eslint/eslint-plugin": "^2.3.1",
+        "@typescript-eslint/parser": "2.3.1",
         "concurrently": "^4.1.2",
         "cross-env": "^6.0.0",
+        "eslint": "^6.4.0",
+        "eslint-config-prettier": "^6.3.0",
+        "eslint-config-react-app": "^5.0.2",
+        "eslint-loader": "3.0.2",
+        "eslint-plugin-flowtype": "4.3.0",
+        "eslint-plugin-import": "2.18.2",
+        "eslint-plugin-jsx-a11y": "6.2.3",
+        "eslint-plugin-prettier": "^3.1.1",
+        "eslint-plugin-react": "7.14.3",
+        "eslint-plugin-react-hooks": "^2.0.1",
+        "eslint-plugin-sonarjs": "^0.4.0",
         "jest": "^24.9.0",
         "nodemon": "^1.19.2",
         "prettier": "^1.18.2",
@@ -59,7 +72,6 @@
         "ts-jest": "^24.1.0",
         "ts-node": "^8.4.1",
         "tsconfig-paths": "3.9.0",
-        "tslint": "^5.20.0",
         "typescript": "^3.6.3",
         "utility-types": "^3.8.0",
         "wait-on": "^3.3.0"
