--- a/apps/api/.eslintrc.json
+++ b/apps/api/.eslintrc.json
@@ -2,35 +2,32 @@
   "extends": [
     "plugin:@typescript-eslint/recommended",
     "prettier/@typescript-eslint",
-    "plugin:sonarjs/recommended",
-    "plugin:jsx-a11y/recommended"
+    "plugin:sonarjs/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaFeatures": {
-
-    },
     "project": "./tsconfig.eslint.json"
   },
   "plugins": [
     "sonarjs",
     "@typescript-eslint",
-    "react-hooks",
     "prettier"
   ],
   "rules": {
     "no-angle-bracket-type-assertion": "off",
     "no-throw-literal": "error",
+    "camelcase": "off",
+    "@typescript-eslint/camelcase": ["error", { "properties": "never", "ignoreDestructuring": true }],
     "@typescript-eslint/no-use-before-define": "warn",
     "@typescript-eslint/interface-name-prefix": "warn",
-    "@typescript-eslint/camelcase": ["error", { "properties": "never", "ignoreDestructuring": true }],
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/explicit-member-accessibility": "off",
     "sonarjs/cognitive-complexity": "error",
     "sonarjs/no-useless-catch": "error",
     "sonarjs/no-identical-expressions": "warn",
-    "sonarjs/no-small-switch": "warn"
+    "sonarjs/no-small-switch": "off",
+    "sonarjs/prefer-immediate-return": "warn"
   },
   "overrides": [
     {
@@ -38,6 +35,12 @@
       "rules": {
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-var-requires": "off"
+      }
+    },
+    {
+      "files": ["routes.ts"],
+      "rules": {
+          "sonarjs/no-duplicate-string": "off"
       }
     }
   ]
