--- a/apps/api/tsconfig.eslint.json
+++ b/apps/api/tsconfig.eslint.json
@@ -1,9 +1,3 @@
 {
-  "extends": "./tsconfig.json",
-  "include": [
-    "scripts/**/*.ts",
-    "test/**/*.ts",
-    "src/**/*.ts",
-    "src/**/*.tsx"
-  ]
+  "extends": "./tsconfig.json"
 }
