--- a/apps/api/.eslintrc.json
+++ b/apps/api/.eslintrc.json
@@ -23,6 +23,17 @@
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/explicit-member-accessibility": "off",
+    "@typescript-eslint/promise-function-async": [
+      "error",
+      {
+          "allowedPromiseNames": ["Thenable"],
+          "checkArrowFunctions": true,
+          "checkFunctionDeclarations": true,
+          "checkFunctionExpressions": true,
+          "checkMethodDeclarations": true
+      }
+    ],
+    "@typescript-eslint/await-thenable": "error",
     "sonarjs/cognitive-complexity": "error",
     "sonarjs/no-useless-catch": "error",
     "sonarjs/no-identical-expressions": "warn",
