--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,7 +15,18 @@
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "test": "jest --config jest.config.js",
     "test:coverage": "jest --config jest.config.js --coverage",
-    "analyze": "webpack-bundle-analyzer dist/.webpack-stats.json dist/public"
+    "analyze": "webpack-bundle-analyzer dist/.webpack-stats.json dist/public",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{json,css,scss}": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "browserslist": {
     "production": [
@@ -106,6 +117,7 @@
     "jest-cli": "^24.9.0",
     "jest-enzyme": "^7.1.1",
     "jest-localstorage-mock": "^2.4.0",
+    "lint-staged": "^9.4.0",
     "mini-css-extract-plugin": "^0.8.0",
     "mkdirp": "^0.5.1",
     "modern-normalize": "^0.5.0",
