added lint-staged (productivity)

--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
   },
   "husky": {
     "hooks": {
+      "pre-commit": "lerna run --concurrency 1 --stream precommit",
       "post-commit": "git diff --name-only HEAD^ | xargs git add",
-      "pre-commit": "lerna run prettier",
-      "pre-push": "lerna run typecheck && lerna run lint"
+      "pre-push": "lerna run typecheck && lerna run test:unit"
     }
   }
 }
