--- a/packages/error-flow/tsconfig.json
+++ b/packages/error-flow/tsconfig.json
@@ -1,7 +1,7 @@
 
 {
   "extends": "../../tsconfig.package.json",
-  "include": ["src", "types"],
+  "include": ["src", "types", "test"],
   "compilerOptions": {
     "rootDir": "./"
   }
