--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,7 +8,7 @@
     "scripts": {
         "db:install": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js schema:sync",
         "db:seed-demo": "ts-node -r tsconfig-paths/register ./scripts/db-seed-demo.ts",
-        "start:dev": "concurrently --handle-input \"wait-on dist/app.js && nodemon\" \"tsc -w -p tsconfig.build.json\" ",
+        "start:dev": "concurrently --handle-input \"wait-on dist/server.js && nodemon\" \"tsc -w -p tsconfig.build.json\" ",
         "start:debug": "nodemon --config nodemon-debug.json",
         "clean": "rimraf --no-glob dist",
         "typecheck": "tsc -p . --noEmit",
