--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@bluewind/api",
+    "name": "@bluewind-app/api",
     "version": "0.0.1",
     "description": "Classroom application backend",
     "author": "Vanvelthem Sébastien",
