--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "bootstrap": "lerna bootstrap",
+    "build:packages": "lerna run --scope \"@bluewind/*\" build  --stream",
     "lerna": "lerna",
     "format": "lerna run format --parallel --stream",
     "lint": "lerna run lint --parallel --stream",
