--- a/packages/error-flow/package.json
+++ b/packages/error-flow/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.0",
   "private": true,
   "main": "dist/index.js",
-  "module": "dist/bluewind-result.esm.js",
+  "module": "dist/error-flow.esm.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
@@ -34,8 +34,6 @@
     "@typescript-eslint/eslint-plugin": "^2.3.1",
     "@typescript-eslint/parser": "2.3.1",
     "@types/jest": "^24.0.18",
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
     "eslint": "^6.5.0",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-import": "2.18.2",
@@ -44,8 +42,6 @@
     "lint-staged": "^9.4.0",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
     "tsdx": "^0.9.2",
     "core-js": "^3.2.1",
     "tslib": "^1.10.0",
