--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         yarn install
         yarn bootstrap
-        yarn build:package
+        yarn build:packages
         yarn typecheck
         yarn test
         yarn lerna run build
