--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bluewind-app/web",
+  "name": "bluewind-web",
   "author": "Vanvelthem Sébastien",
   "license": "MIT",
   "version": "0.1.0",
