--- a/.prettierrc
+++ b/.prettierrc
@@ -9,12 +9,12 @@
       "files": "*.scss",
       "options": {
         "printWidth": 140,
-        "tabWidth": 2,
+        "tabWidth": 2
       }
     },{
       "files": "*.json",
       "options": {
-         "tabWidth": 2,
+         "tabWidth": 2
       }
     }
   ]
