--- a/packages/error-flow/.eslintrc.json
+++ b/packages/error-flow/.eslintrc.json
@@ -2,7 +2,7 @@
     "extends": ["plugin:@typescript-eslint/recommended", "prettier/@typescript-eslint", "plugin:sonarjs/recommended"],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "project": "./tsconfig.json"
+        "project": "./tsconfig.eslint.json"
     },
     "plugins": ["sonarjs", "@typescript-eslint", "prettier"],
     "rules": {
