--- a/packages/error-flow/tsconfig.eslint.json
+++ b/packages/error-flow/tsconfig.eslint.json
@@ -1,8 +1,5 @@
 
 {
   "extends": "./tsconfig.json",
-  "include": ["src", "types", "test", "example"],
-  "compilerOptions": {
-    "rootDir": "./"
-  }
+  "include": ["src", "types", "test", "example"]
 }
