--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -41,7 +41,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
+    "@babel/core": "^7.6.3",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-json-strings": "^7.2.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
@@ -50,29 +50,29 @@
     "@babel/plugin-transform-modules-commonjs": "^7.6.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/plugin-transform-spread": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
     "@babel/preset-typescript": "^7.6.0",
-    "@babel/runtime-corejs3": "^7.6.2",
+    "@babel/runtime-corejs3": "^7.6.3",
     "@bluewind/error-flow": "*",
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@gfx/zopfli": "^1.0.14",
-    "@hot-loader/react-dom": "^16.9.0",
+    "@hot-loader/react-dom": "^16.10.2",
     "@types/dotenv": "^6.1.1",
     "@types/dotenv-webpack": "^1.7.0",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/history": "^4.7.3",
     "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.11",
+    "@types/node": "^12.7.12",
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
     "@types/react-redux": "^7.1.4",
     "@types/react-router-dom": "^5.1.0",
     "@types/source-map-support": "^0.5.0",
     "@types/yup": "^0.26.24",
-    "@typescript-eslint/eslint-plugin": "^2.3.2",
-    "@typescript-eslint/parser": "^2.3.2",
+    "@typescript-eslint/eslint-plugin": "^2.3.3",
+    "@typescript-eslint/parser": "^2.3.3",
     "autoprefixer": "^9.6.4",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
@@ -117,7 +117,7 @@
     "jest-cli": "^24.9.0",
     "jest-enzyme": "^7.1.1",
     "jest-localstorage-mock": "^2.4.0",
-    "lint-staged": "^9.4.1",
+    "lint-staged": "^9.4.2",
     "mini-css-extract-plugin": "^0.8.0",
     "mkdirp": "^0.5.1",
     "modern-normalize": "^0.5.0",
@@ -128,7 +128,7 @@
     "prettier": "^1.18.2",
     "raw-loader": "^3.1.0",
     "react-async-devtools": "^9.0.0",
-    "react-hot-loader": "^4.12.14",
+    "react-hot-loader": "^4.12.15",
     "request": "^2.88.0",
     "rimraf": "^3.0.0",
     "sass-loader": "^8.0.0",
@@ -157,17 +157,20 @@
     "with-default-props": "^0.2.1"
   },
   "dependencies": {
-    "@babel/runtime": "^7.6.2",
+    "@babel/runtime": "^7.6.3",
     "@chakra-ui/core": "^0.3.2",
+    "@emotion/babel-preset-css-prop": "^10.0.17",
     "@emotion/core": "^10.0.21",
     "@emotion/styled": "^10.0.17",
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
     "@material-ui/lab": "^4.0.0-alpha.26",
     "@sindresorhus/is": "^1.2.0",
+    "add": "^2.0.6",
     "camelcase-keys": "^6.0.1",
     "core-js": "3",
     "date-fns": "^2.4.1",
+    "emotion-theming": "^10.0.19",
     "final-form": "^4.18.5",
     "fp-ts": "^2.1.0",
     "history": "^4.10.1",
@@ -188,9 +191,11 @@
     "redux-starter-kit": "^0.7.0",
     "redux-thunk": "^2.3.0",
     "snakecase-keys": "^3.1.0",
+    "styled-system": "^5.1.2",
     "tslib": "^1.10.0",
     "use-debounce": "^3.1.0",
     "use-react-router": "^1.0.7",
+    "yarn": "^1.19.1",
     "yup": "^0.27.0"
   }
 }
