--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -1,50 +1,46 @@
 {
-  "extends": [
-    "plugin:@typescript-eslint/recommended",
-    "prettier/@typescript-eslint",
-    "plugin:sonarjs/recommended",
-    "plugin:jsx-a11y/recommended"
-  ],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
+    "extends": [
+        "plugin:@typescript-eslint/recommended",
+        "prettier/@typescript-eslint",
+        "plugin:sonarjs/recommended",
+        "plugin:jsx-a11y/recommended"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "project": "./tsconfig.eslint.json"
     },
-    "project": "./tsconfig.eslint.json"
-  },
-  "plugins": [
-    "sonarjs",
-    "@typescript-eslint",
-    "react-hooks",
-    "prettier"
-  ],
-  "rules": {
-    "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn",
-    "no-angle-bracket-type-assertion": "off",
-    "no-throw-literal": "error",
-    "jsx-a11y/href-no-hash": "off",
-    "jsx-a11y/anchor-is-valid": "off",
-    "jsx-a11y/click-events-have-key-events": "warn",
-    "jsx-a11y/no-noninteractive-element-to-interactive-role": "warn",
-    "@typescript-eslint/no-use-before-define": "warn",
-    "@typescript-eslint/interface-name-prefix": "warn",
-    "@typescript-eslint/camelcase": ["error", { "properties": "never", "ignoreDestructuring": true }],
-    "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/no-unused-vars": "off",
-    "@typescript-eslint/explicit-member-accessibility": "off",
-    "sonarjs/cognitive-complexity": "error",
-    "sonarjs/no-useless-catch": "error",
-    "sonarjs/no-identical-expressions": "warn",
-    "sonarjs/no-small-switch": "warn"
-  },
-  "overrides": [
-    {
-      "files": ["jest.*.ts"],
-      "rules": {
-        "@typescript-eslint/no-explicit-any": "off",
-        "@typescript-eslint/no-var-requires": "off"
-      }
-    }
-  ]
+    "plugins": ["sonarjs", "@typescript-eslint", "react-hooks", "prettier"],
+    "rules": {
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "warn",
+        "no-angle-bracket-type-assertion": "off",
+        "no-throw-literal": "error",
+        "jsx-a11y/href-no-hash": "off",
+        "jsx-a11y/anchor-is-valid": "off",
+        "jsx-a11y/click-events-have-key-events": "warn",
+        "jsx-a11y/no-noninteractive-element-to-interactive-role": "warn",
+        "jsx-a11y/no-static-element-interactions": "warn",
+        "@typescript-eslint/no-use-before-define": "warn",
+        "@typescript-eslint/interface-name-prefix": "warn",
+        "@typescript-eslint/camelcase": ["error", { "properties": "never", "ignoreDestructuring": true }],
+        "@typescript-eslint/explicit-function-return-type": "off",
+        "@typescript-eslint/no-unused-vars": "off",
+        "@typescript-eslint/explicit-member-accessibility": "off",
+        "sonarjs/cognitive-complexity": "error",
+        "sonarjs/no-useless-catch": "error",
+        "sonarjs/no-identical-expressions": "warn",
+        "sonarjs/no-small-switch": "warn"
+    },
+    "overrides": [
+        {
+            "files": ["jest.*.ts"],
+            "rules": {
+                "@typescript-eslint/no-explicit-any": "off",
+                "@typescript-eslint/no-var-requires": "off"
+            }
+        }
+    ]
 }
