--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -70,6 +70,7 @@
     "@types/react-redux": "^7.1.4",
     "@types/react-router-dom": "^5.1.0",
     "@types/source-map-support": "^0.5.0",
+    "@types/styled-system": "^5.1.2",
     "@types/yup": "^0.26.24",
     "@typescript-eslint/eslint-plugin": "^2.3.3",
     "@typescript-eslint/parser": "^2.3.3",
@@ -158,15 +159,10 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.6.3",
-    "@chakra-ui/core": "^0.3.2",
     "@emotion/babel-preset-css-prop": "^10.0.17",
     "@emotion/core": "^10.0.21",
     "@emotion/styled": "^10.0.17",
-    "@material-ui/core": "^4.5.0",
-    "@material-ui/icons": "^4.4.3",
-    "@material-ui/lab": "^4.0.0-alpha.26",
     "@sindresorhus/is": "^1.2.0",
-    "add": "^2.0.6",
     "camelcase-keys": "^6.0.1",
     "core-js": "3",
     "date-fns": "^2.4.1",
