--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -71,7 +71,6 @@
     "@types/react-router-dom": "^5.1.0",
     "@types/source-map-support": "^0.5.0",
     "@types/styled-system": "^5.1.2",
-    "@types/yup": "^0.26.24",
     "@typescript-eslint/eslint-plugin": "^2.4.0",
     "@typescript-eslint/parser": "^2.4.0",
     "autoprefixer": "^9.6.5",
@@ -148,7 +147,7 @@
     "url-loader": "^2.2.0",
     "utility-types": "^3.8.0",
     "webpack": "^4.41.2",
-    "webpack-bundle-analyzer": "^3.5.2",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.8.2",
@@ -163,6 +162,7 @@
     "@emotion/core": "^10.0.21",
     "@emotion/styled": "^10.0.17",
     "@sindresorhus/is": "^1.2.0",
+    "@styled-system/css": "^5.0.23",
     "abort-controller": "^3.0.0",
     "camelcase-keys": "^6.0.1",
     "core-js": "3",
@@ -191,8 +191,6 @@
     "styled-system": "^5.1.2",
     "tslib": "^1.10.0",
     "use-debounce": "^3.1.0",
-    "use-react-router": "^1.0.7",
-    "yarn": "^1.19.1",
-    "yup": "^0.27.0"
+    "yarn": "^1.19.1"
   }
 }
