--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -33,12 +33,13 @@
         ]
     },
     "dependencies": {
-        "@sindresorhus/is": "^1.2.0",
         "@bluewind/error-flow": "*",
+        "@sindresorhus/is": "^1.2.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "class-transformer": "^0.2.3",
         "class-validator": "^0.10.2",
+        "cookie-parser": "^1.4.4",
         "cors": "^2.8.5",
         "envalid": "^5.0.0",
         "express": "^4.17.1",
@@ -47,12 +48,13 @@
         "reflect-metadata": "^0.1.13",
         "swagger-ui-express": "^4.1.2",
         "ts-money": "^0.4.6",
-        "typeorm": "^0.2.19",
+        "typeorm": "^0.2.20",
         "winston": "^3.2.1"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
         "@types/body-parser": "^1.17.1",
+        "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.1",
         "@types/jest": "^24.0.19",
