--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -53,7 +53,7 @@
         "allowSyntheticDefaultImports": true,     /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
         "esModuleInterop": true,                  /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
 
-        "importHelpers": true,                     /* Import emit helpers from 'tslib'. */
+        "importHelpers": false,                     /* Import emit helpers from 'tslib'. */
         "noEmitHelpers": false,                    /* Emit helpers */
 
         // "preserveSymlinks": true,              /* Do not resolve the real path of symlinks. */
