--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,7 +24,7 @@
       "git add"
     ],
     "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
+      "eslint --fix --rule 'react-hooks/exhaustive-deps: off'",
       "git add"
     ]
   },
@@ -64,7 +64,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/history": "^4.7.3",
     "@types/jest": "^24.0.19",
-    "@types/node": "^12.11.2",
+    "@types/node": "^12.11.6",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
     "@types/react-redux": "^7.1.5",
@@ -77,7 +77,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
-    "babel-plugin-emotion": "^10.0.21",
+    "babel-plugin-emotion": "^10.0.22",
     "babel-preset-react-app": "^9.0.2",
     "brotli-webpack-plugin": "^1.1.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -104,10 +104,10 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "7.16.0",
-    "eslint-plugin-react-hooks": "^2.1.2",
+    "eslint-plugin-react-hooks": "^2.2.0",
     "eslint-plugin-sonarjs": "^0.4.0",
     "file-loader": "^4.2.0",
-    "fork-ts-checker-webpack-plugin": "^1.5.1",
+    "fork-ts-checker-webpack-plugin": "^1.6.0",
     "html-loader": "^0.5.5",
     "html-minifier": "^4.0.0",
     "html-webpack-harddisk-plugin": "^1.0.1",
@@ -121,7 +121,7 @@
     "mini-css-extract-plugin": "^0.8.0",
     "mkdirp": "^0.5.1",
     "modern-normalize": "^0.5.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "null-loader": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
@@ -138,7 +138,7 @@
     "terser": "^4.3.9",
     "terser-webpack-plugin": "^2.2.1",
     "ts-jest": "^24.1.0",
-    "ts-loader": "^6.2.0",
+    "ts-loader": "^6.2.1",
     "ts-node": "^8.4.1",
     "tslib": "^1.10.0",
     "typeface-muli": "0.0.71",
@@ -158,9 +158,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.6.3",
-    "@emotion/babel-preset-css-prop": "^10.0.17",
-    "@emotion/core": "^10.0.21",
-    "@emotion/styled": "^10.0.17",
+    "@emotion/babel-preset-css-prop": "^10.0.22",
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.22",
     "@sindresorhus/is": "^1.2.0",
     "@styled-system/css": "^5.0.23",
     "abort-controller": "^3.0.0",
@@ -175,9 +175,9 @@
     "io-ts-promise": "^2.0.1",
     "ky": "^0.15.0",
     "loglevel": "^1.6.4",
-    "react": "^16.10.2",
+    "react": "^16.11.0",
     "react-async": "^9.0.0",
-    "react-dom": "^16.10.2",
+    "react-dom": "^16.11.0",
     "react-error-boundary": "^1.2.5",
     "react-final-form": "^6.3.0",
     "react-icons": "^3.7.0",
@@ -185,7 +185,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
-    "redux-starter-kit": "^0.9.1",
+    "redux-starter-kit": "^1.0.0",
     "redux-thunk": "^2.3.0",
     "snakecase-keys": "^3.1.0",
     "styled-system": "^5.1.2",
