--- a/apps/api/.eslintrc.json
+++ b/apps/api/.eslintrc.json
@@ -30,7 +30,9 @@
         "sonarjs/no-useless-catch": "error",
         "sonarjs/no-identical-expressions": "warn",
         "sonarjs/no-small-switch": "off",
-        "sonarjs/prefer-immediate-return": "warn"
+        "sonarjs/prefer-immediate-return": "warn",
+        "sonarjs/no-duplicate-string": "off",
+        "sonarjs/no-identical-functions": "warn"
     },
     "overrides": [
         {
