--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -38,7 +38,7 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "class-transformer": "^0.2.3",
-        "class-validator": "^0.10.2",
+        "class-validator": "^0.11.0",
         "cookie-parser": "^1.4.4",
         "cors": "^2.8.5",
         "envalid": "^5.0.0",
@@ -48,6 +48,7 @@
         "reflect-metadata": "^0.1.13",
         "swagger-ui-express": "^4.1.2",
         "ts-money": "^0.4.6",
+        "tsyringe": "^4.0.0",
         "typeorm": "^0.2.20",
         "winston": "^3.2.1"
     },
@@ -56,14 +57,14 @@
         "@types/body-parser": "^1.17.1",
         "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.6",
-        "@types/express": "^4.17.1",
-        "@types/jest": "^24.0.20",
+        "@types/express": "^4.17.2",
+        "@types/jest": "^24.0.21",
         "@types/jsonwebtoken": "^8.3.5",
-        "@types/node": "^12.11.7",
+        "@types/node": "^12.12.5",
         "@types/sqlite3": "^3.1.5",
         "@types/swagger-ui-express": "^3.0.1",
-        "@typescript-eslint/eslint-plugin": "^2.5.0",
-        "@typescript-eslint/parser": "2.5.0",
+        "@typescript-eslint/eslint-plugin": "^2.6.0",
+        "@typescript-eslint/parser": "2.6.0",
         "concurrently": "^5.0.0",
         "cross-env": "^6.0.3",
         "eslint": "^6.6.0",
@@ -82,7 +83,7 @@
         "ts-node": "^8.4.1",
         "tsconfig-paths": "3.9.0",
         "typescript": "^3.6.4",
-        "utility-types": "^3.8.0",
+        "utility-types": "^3.9.0",
         "wait-on": "^3.3.0"
     },
     "engines": {
