--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -23,6 +23,16 @@
         "jsx-a11y/click-events-have-key-events": "warn",
         "jsx-a11y/no-noninteractive-element-to-interactive-role": "warn",
         "jsx-a11y/no-static-element-interactions": "warn",
+        "jsx-a11y/label-has-associated-control": [
+            "error",
+            {
+                // Add a list of react components names that should
+                // be considered as valid input for the rule.
+                "controlComponents": ["TextField"],
+                "assert": "either",
+                "depth": 2
+            }
+        ],
         "@typescript-eslint/no-use-before-define": "warn",
         "@typescript-eslint/interface-name-prefix": "warn",
         "@typescript-eslint/camelcase": ["error", { "properties": "never", "ignoreDestructuring": true }],
