--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -69,6 +69,7 @@
     "@types/react-dom": "^16.9.3",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.2",
+    "@types/redux-mock-store": "^1.0.1",
     "@types/source-map-support": "^0.5.0",
     "@types/styled-system": "^5.1.2",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
@@ -129,6 +130,7 @@
     "raw-loader": "^3.1.0",
     "react-async-devtools": "^9.0.0",
     "react-hot-loader": "^4.12.15",
+    "redux-mock-store": "^1.5.3",
     "request": "^2.88.0",
     "rimraf": "^3.0.0",
     "sass-loader": "^8.0.0",
