--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -41,19 +41,19 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/core": "^7.7.0",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/plugin-proposal-json-strings": "^7.2.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-import-meta": "^7.2.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.6.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.7.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/plugin-transform-spread": "^7.6.2",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-react": "^7.6.3",
-    "@babel/preset-typescript": "^7.6.0",
-    "@babel/runtime-corejs3": "^7.6.3",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
+    "@babel/preset-typescript": "^7.7.0",
+    "@babel/runtime-corejs3": "^7.7.1",
     "@bluewind/error-flow": "*",
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@gfx/zopfli": "^1.0.14",
@@ -63,8 +63,8 @@
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/history": "^4.7.3",
-    "@types/jest": "^24.0.21",
-    "@types/node": "^12.12.5",
+    "@types/jest": "^24.0.22",
+    "@types/node": "^12.12.6",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "@types/react-redux": "^7.1.5",
@@ -145,7 +145,7 @@
     "tslib": "^1.10.0",
     "typeface-muli": "0.0.71",
     "typesafe-actions": "^5.1.0",
-    "typescript": "^3.7.1-rc",
+    "typescript": "^3.7.2",
     "url-loader": "^2.2.0",
     "utility-types": "^3.9.0",
     "webpack": "^4.41.2",
@@ -159,7 +159,7 @@
     "with-default-props": "^0.2.1"
   },
   "dependencies": {
-    "@babel/runtime": "^7.6.3",
+    "@babel/runtime": "^7.7.1",
     "@emotion/babel-preset-css-prop": "^10.0.23",
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
@@ -183,7 +183,7 @@
     "react-error-boundary": "^1.2.5",
     "react-final-form": "^6.3.0",
     "react-icons": "^3.8.0",
-    "react-redux": "^7.1.1",
+    "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
