--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -82,7 +82,7 @@
         "ts-jest": "^24.1.0",
         "ts-node": "^8.4.1",
         "tsconfig-paths": "3.9.0",
-        "typescript": "^3.7.2",
+        "typescript": "3.6.4",
         "utility-types": "^3.9.0",
         "wait-on": "^3.3.0"
     },
