--- a/packages/error-flow/package.json
+++ b/packages/error-flow/package.json
@@ -42,7 +42,7 @@
     "tsdx": "^0.11.0",
     "core-js": "^3.3.6",
     "tslib": "^1.10.0",
-    "typescript": "^3.7.2"
+    "typescript": "3.6.2"
   }
 }
 
