--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -73,6 +73,8 @@
         "eslint-plugin-flowtype": "4.3.0",
         "eslint-plugin-import": "2.18.2",
         "eslint-plugin-prettier": "^3.1.1",
+        "eslint-plugin-jest": "^23.0.2",
+        "eslint-plugin-jest-formatting": "^1.2.0",
         "eslint-plugin-sonarjs": "^0.4.0",
         "jest": "^24.9.0",
         "nodemon": "^1.19.4",
