--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -52,12 +52,12 @@
     "@babel/plugin-transform-spread": "^7.6.2",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
-    "@babel/preset-typescript": "^7.7.0",
-    "@babel/runtime-corejs3": "^7.7.1",
+    "@babel/preset-typescript": "^7.7.2",
+    "@babel/runtime-corejs3": "^7.7.2",
     "@bluewind/error-flow": "*",
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@gfx/zopfli": "^1.0.14",
-    "@hot-loader/react-dom": "^16.10.2",
+    "@hot-loader/react-dom": "^16.11.0",
     "@types/dotenv": "^8.2.0",
     "@types/dotenv-webpack": "^1.7.0",
     "@types/enzyme": "^3.10.3",
@@ -84,7 +84,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^3.0.0",
     "concurrently": "^5.0.0",
-    "copy-webpack-plugin": "^5.0.4",
+    "copy-webpack-plugin": "^5.0.5",
     "cross-env": "^6.0.3",
     "css-hot-loader": "^1.4.4",
     "css-loader": "^3.2.0",
@@ -98,6 +98,8 @@
     "es-check": "^5.0.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-jest": "^23.0.2",
+    "eslint-plugin-jest-formatting": "^1.2.0",
     "eslint-config-react-app": "^5.0.2",
     "eslint-loader": "3.0.2",
     "eslint-plugin-flowtype": "4.3.0",
@@ -129,7 +131,7 @@
     "prettier": "^1.18.2",
     "raw-loader": "^3.1.0",
     "react-async-devtools": "^9.0.0",
-    "react-hot-loader": "^4.12.15",
+    "react-hot-loader": "^4.12.16",
     "redux-mock-store": "^1.5.3",
     "request": "^2.88.0",
     "rimraf": "^3.0.0",
@@ -168,9 +170,9 @@
     "abort-controller": "^3.0.0",
     "camelcase-keys": "^6.1.0",
     "core-js": "3",
-    "date-fns": "^2.6.0",
+    "date-fns": "^2.7.0",
     "emotion-theming": "^10.0.19",
-    "final-form": "^4.18.5",
+    "final-form": "^4.18.6",
     "fp-ts": "^2.1.1",
     "history": "^4.10.1",
     "io-ts": "^2.0.1",
