--- a/packages/error-flow/.eslintrc.json
+++ b/packages/error-flow/.eslintrc.json
@@ -1,41 +1,63 @@
 {
-    "extends": ["plugin:@typescript-eslint/recommended", "prettier/@typescript-eslint", "plugin:sonarjs/recommended"],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "project": "./tsconfig.eslint.json"
-    },
-    "plugins": ["sonarjs", "@typescript-eslint", "prettier"],
-    "rules": {
-        "no-throw-literal": "error",
-        "@typescript-eslint/no-use-before-define": "error",
-        "@typescript-eslint/interface-name-prefix": "error",
-        "@typescript-eslint/explicit-function-return-type": "error",
-        "@typescript-eslint/no-unused-vars": "error",
-        "@typescript-eslint/explicit-member-accessibility": "off",
-        "@typescript-eslint/promise-function-async": [
-            "error",
-            {
-                "allowedPromiseNames": ["Thenable"],
-                "checkArrowFunctions": true,
-                "checkFunctionDeclarations": true,
-                "checkFunctionExpressions": true,
-                "checkMethodDeclarations": true
-            }
+  "extends": [
+    "plugin:@typescript-eslint/recommended",
+    "prettier/@typescript-eslint",
+    "plugin:sonarjs/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.eslint.json"
+  },
+  "plugins": [
+    "sonarjs",
+    "@typescript-eslint",
+    "prettier",
+    "jest",
+    "jest-formatting"
+  ],
+  "rules": {
+    "no-throw-literal": "error",
+    "@typescript-eslint/no-use-before-define": "error",
+    "@typescript-eslint/interface-name-prefix": "error",
+    "@typescript-eslint/explicit-function-return-type": "error",
+    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/explicit-member-accessibility": "off",
+    "@typescript-eslint/promise-function-async": [
+      "error",
+      {
+        "allowedPromiseNames": [
+          "Thenable"
         ],
-        "@typescript-eslint/await-thenable": "error",
-        "sonarjs/cognitive-complexity": "error",
-        "sonarjs/no-useless-catch": "error",
-        "sonarjs/no-identical-expressions": "error",
-        "sonarjs/no-small-switch": "error",
-        "sonarjs/prefer-immediate-return": "error"
-    },
-    "overrides": [
-        {
-            "files": ["*.test.ts"],
-            "rules": {
-                "@typescript-eslint/no-explicit-any": "off",
-                "@typescript-eslint/no-var-requires": "off"
-            }
-        }
-    ]
+        "checkArrowFunctions": true,
+        "checkFunctionDeclarations": true,
+        "checkFunctionExpressions": true,
+        "checkMethodDeclarations": true
+      }
+    ],
+    "@typescript-eslint/await-thenable": "error",
+    "jest/consistent-test-it": [
+      "error",
+      {
+        "fn": "it"
+      }
+    ],
+    "jest-formatting/padding-before-test-blocks": 2,
+    "jest-formatting/padding-before-describe-blocks": 2,
+    "sonarjs/cognitive-complexity": "error",
+    "sonarjs/no-useless-catch": "error",
+    "sonarjs/no-identical-expressions": "error",
+    "sonarjs/no-small-switch": "error",
+    "sonarjs/prefer-immediate-return": "error"
+  },
+  "overrides": [
+    {
+      "files": [
+        "*.test.ts"
+      ],
+      "rules": {
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-var-requires": "off"
+      }
+    }
+  ]
 }
