--- a/packages/error-flow/package.json
+++ b/packages/error-flow/package.json
@@ -35,6 +35,8 @@
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-jest": "^23.0.2",
+    "eslint-plugin-jest-formatting": "^1.2.0",
     "eslint-plugin-sonarjs": "^0.4.0",
     "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
