--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -82,6 +82,13 @@
                 "@typescript-eslint/no-explicit-any": "off",
                 "@typescript-eslint/no-var-requires": "off"
             }
+        },
+        {
+            "files": ["*.test.ts", "*.spec.ts"],
+            "rules": {
+                "@typescript-eslint/no-non-null-assertion": "off",
+                "@typescript-eslint/no-object-literal-type-assertion": "off"
+            }
         }
     ]
 }
