chore: fix jest isolated modules

--- a/apps/web/tsconfig.jest.json
+++ b/apps/web/tsconfig.jest.json
@@ -9,6 +9,7 @@
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
         "importHelpers": false,
-        "noEmitHelpers": false
+        "noEmitHelpers": false,
+        "isolatedModules": false
     }
 }
