chore: codecov attempt 3

--- a/codecov.yml
+++ b/codecov.yml
@@ -18,5 +18,5 @@ flags:
             - apps/web
     packagesErrorFlow:
         paths:
-            - packages-error-flow
+            - packages/error-flow
 
