--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ jobs:
     - stage: "bluewind-web"
       script:
           - yarn workspace bluewind-web test:coverage
-          - cd apps/web && codecov -F apps-web && cd ../..
+          - cd apps/web && codecov -F appsWeb && cd ../..
           - yarn workspace bluewind-web build
           - yarn workspace bluewind-web es-check
     - stage: "bluewind-api"
