--- a/packages/error-flow/package.json
+++ b/packages/error-flow/package.json
@@ -15,6 +15,7 @@
     "force-clean": "rimraf --no-glob dist",
     "build": "tsdx build",
     "test": "tsdx test --env=jsdom",
+    "test:coverage": "tsdx test --coverage --env=jsdom",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write \"./src/**/*.{ts,tsx,css,scss,js,json}\"",
