--- a/codecov.yml
+++ b/codecov.yml
@@ -8,6 +8,7 @@ coverage:
                 flags: appsWeb
             packagesErrorFlow:
                 flags: packagesErrorFlow
+                threshold: 60
 
 flags:
     appsApi:
