--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 
 node_js:
-  - "12"
+  - "10"
 
 cache:
   directories:
@@ -47,7 +47,7 @@ jobs:
     # Coverage
     - stage: Coverage
       script:
-          - yarn add codecov
+          - yarn add codecov --ignore-workspace-root-check
           - cd packages/error-flow && codecov -F packagesErrorFlow && cd ../..
           - cd apps/web && codecov -F appsWeb && cd ../..
 
