chore: migrate to @redux/toolkit

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -95,7 +95,7 @@
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
-    "es-check": "^5.0.0",
+    "es-check": "^5.1.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-jest": "^23.0.3",
@@ -119,7 +119,7 @@
     "jest-cli": "^24.9.0",
     "jest-enzyme": "^7.1.2",
     "jest-localstorage-mock": "^2.4.0",
-    "lint-staged": "^9.4.2",
+    "lint-staged": "^9.4.3",
     "mini-css-extract-plugin": "^0.8.0",
     "mkdirp": "^0.5.1",
     "modern-normalize": "^0.5.0",
@@ -135,7 +135,7 @@
     "request": "^2.88.0",
     "rimraf": "^3.0.0",
     "sass-loader": "^8.0.0",
-    "source-map-explorer": "^2.1.0",
+    "source-map-explorer": "^2.1.1",
     "source-map-support": "^0.5.16",
     "style-loader": "^1.0.0",
     "terser": "^4.4.0",
@@ -164,6 +164,7 @@
     "@emotion/babel-preset-css-prop": "^10.0.23",
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
+    "@reduxjs/toolkit": "^1.0.4",
     "@sindresorhus/is": "^1.2.0",
     "@styled-system/css": "^5.0.23",
     "abort-controller": "^3.0.0",
@@ -188,7 +189,6 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
-    "redux-starter-kit": "^1.0.1",
     "redux-thunk": "^2.3.0",
     "snakecase-keys": "^3.1.0",
     "styled-system": "^5.1.2",
