chore: fix typeorm cli resolution

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,7 +6,7 @@
     "license": "AGPL-3.0",
     "private": true,
     "scripts": {
-        "db:install": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js schema:sync",
+        "db:install": "ts-node -r tsconfig-paths/register ./scripts/typeorm.cli.ts schema:sync",
         "db:seed-demo": "ts-node -r tsconfig-paths/register ./scripts/db-seed-demo.ts",
         "start:dev": "concurrently --handle-input \"wait-on dist/server.js && nodemon\" \"tsc -w -p tsconfig.build.json\" ",
         "start:debug": "nodemon --config nodemon-debug.json",
