doc: added warning for auto synchronize

--- a/apps/api/.env.template
+++ b/apps/api/.env.template
@@ -17,7 +17,8 @@ TYPEORM_DATABASE = data/bluewind.sqlite
 #TYPEORM_PORT = 3306
 #TYPEORM_DRIVER_EXTRA = '{"charset": "utf8mb4"}'
 
-TYPEORM_SYNCHRONIZE = false
+# Be sure, synchronize is not made on production
+TYPEORM_SYNCHRONIZE = true
 TYPEORM_LOGGING = true
 TYPEORM_ENTITIES = '**/*.entity.ts'
 TYPEORM_MIGRATIONS = src/migration/*.ts
