--- a/apps/api/.eslintrc.json
+++ b/apps/api/.eslintrc.json
@@ -25,6 +25,7 @@
         "@typescript-eslint/interface-name-prefix": "warn",
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/no-unused-vars": "off",
+        "@typescript-eslint/no-empty-function": "warn",
         "@typescript-eslint/explicit-member-accessibility": "off",
         "@typescript-eslint/promise-function-async": [
             "error",
@@ -63,7 +64,8 @@
             "files": ["*.test.ts", "*.ispec.ts"],
             "rules": {
                 "@typescript-eslint/no-explicit-any": "off",
-                "@typescript-eslint/no-var-requires": "off"
+                "@typescript-eslint/no-var-requires": "off",
+                "@typescript-eslint/no-empty-function": "off"
             }
         },
         {
