--- a/packages/error-flow/package.json
+++ b/packages/error-flow/package.json
@@ -14,8 +14,8 @@
     "start": "tsdx watch",
     "force-clean": "rimraf --no-glob dist",
     "build": "tsdx build",
-    "test": "tsdx test --env=jsdom",
-    "test:coverage": "tsdx test --coverage --env=jsdom",
+    "test": "CI=true tsdx test --env=jsdom",
+    "test:coverage": "CI=true tsdx test --coverage --env=jsdom",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write \"./src/**/*.{ts,tsx,css,scss,js,json}\"",
