chore(codecov): improve github action and test codecov

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -37,8 +37,8 @@ jobs:
       run: |
           cat .codecov.yml | curl --data-binary @- https://codecov.io/validate
           npm install -g codecov
-          (cd packages/error-flow && codecov -F packageErrorFlow -t ${{ secrets.CODECOV_TOKEN }})
-          (cd apps/web && codecov -F appsWeb -t ${{ secrets.CODECOV_TOKEN }})
+          cd packages/error-flow && codecov -F packageErrorFlow -t ${{ secrets.CODECOV_TOKEN }} && cd ../..
+          cd apps/web && codecov -F appsWeb -t ${{ secrets.CODECOV_TOKEN }} && cd ../..
 
     - name: "Lint & typecheck"
       run: |
