--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,7 +16,8 @@
     "test": "jest --config jest.config.js",
     "test:coverage": "jest --config jest.config.js --coverage",
     "analyze": "webpack-bundle-analyzer dist/.webpack-stats.json dist/public",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "coverage:publish": "codecov --root=../../ -F appsWeb"
   },
   "lint-staged": {
     "*.{json,css,scss}": [
