--- a/packages/error-flow/package.json
+++ b/packages/error-flow/package.json
@@ -19,7 +19,8 @@
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write \"./src/**/*.{ts,tsx,css,scss,js,json}\"",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "coverage:publish": "codecov --root=../../ -F packagesErrorFlow"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
