--- a/packages/error-flow/package.json
+++ b/packages/error-flow/package.json
@@ -20,7 +20,7 @@
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write \"./src/**/*.{ts,tsx,css,scss,js,json}\"",
     "precommit": "lint-staged",
-    "coverage:publish": "codecov --root=../../ -F packagesErrorFlow"
+    "coverage2:publish": "codecov --root=../../ -F packages"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
