--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,7 +17,7 @@
     "test:coverage": "jest --config jest.config.js --coverage",
     "analyze": "webpack-bundle-analyzer dist/.webpack-stats.json dist/public",
     "precommit": "lint-staged",
-    "coverage:publish": "codecov --root=../../ -F appsWeb"
+    "coverage:publish": "codecov --root=../../ -F apps"
   },
   "lint-staged": {
     "*.{json,css,scss}": [
